--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="ro" dir="ltr">
   <head>
     <meta charset="utf-8" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
@@ -9,17 +9,25 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>Crosul Speranței Blaj - Editia a VI-a</title>
-    <meta name="title" content="Crosul Speranței Blaj - Editia a VI-a" />
+    <title>
+      Crosul Speranței Blaj - Editia a VIII-a | Eveniment Caritabil de Alergare
+    </title>
+    <meta
+      name="title"
+      content="Crosul Speranței Blaj - Editia a VIII-a | Eveniment Caritabil de Alergare"
+    />
     <meta
       name="description"
-      content="Alătură-te celei de-a VI-a ediții a Crosului Speranței, un eveniment care combină sportul cu spiritul caritabil. Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă."
+      content="Alătură-te celei de-a VIII-a ediții a Crosului Speranței, un eveniment care combină sportul cu spiritul caritabil. Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă."
     />
     <meta
       name="keywords"
       content="cros, Blaj, Alba, alergare, caritate, sport, evenimente, speranța, Romania"
     />
     <meta name="author" content="Crosul Speranței Blaj" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#1f3e25" />
+    <meta name="application-name" content="Crosul Speranței Blaj" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -27,10 +35,13 @@
       property="og:url"
       content="https://crosul-sperantei-blaj.netlify.app/"
     />
-    <meta property="og:title" content="Crosul Speranței Blaj - Editia a VI-a" />
+    <meta
+      property="og:title"
+      content="Crosul Speranței Blaj - Editia a VIII-a | Eveniment Caritabil de Alergare"
+    />
     <meta
       property="og:description"
-      content="Alătură-te celei de-a VI-a ediții a Crosului Speranței, un eveniment care combină sportul cu spiritul caritabil. Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă."
+      content="Alătură-te celei de-a VIII-a ediții a Crosului Speranței, un eveniment care combină sportul cu spiritul caritabil. Evenimentul principal al anului - crosul care adună comunitatea pentru o cauză nobilă."
     />
     <meta property="og:image" content="./assets/images/logo-crosul.png" />
     <meta property="og:image:width" content="1200" />
@@ -46,7 +57,7 @@
     />
     <meta
       property="twitter:title"
-      content="Crosul Speranței Blaj - Editia a VI-a"
+      content="Crosul Speranței Blaj - Editia a VIII-a | Eveniment Caritabil de Alergare"
     />
     <meta
       property="twitter:description"
