--- a/web/index.html
+++ b/web/index.html
@@ -105,8 +105,8 @@
     <link rel="shortcut icon" href="./assets/icons/favicon-32x32.png" />
 
     <!-- Theme Color -->
-    <meta name="theme-color" content="#1f3e25" />
-    <meta name="msapplication-TileColor" content="#1f3e25" />
+    <meta name="theme-color" content="#0D0D0D" />
+    <meta name="msapplication-TileColor" content="#0D0D0D" />
     <meta name="msapplication-config" content="./browserconfig.xml" />
 
     <!-- PWA -->
@@ -131,7 +131,7 @@
         display: flex;
         height: 100%;
         flex: 1;
-        background-color: #1f3e25;
+        background-color: #0d0d0d;
       }
 
       /* Loading screen */
@@ -141,7 +141,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #1f3e25;
+        background-color: #0d0d0d;
         display: flex;
         justify-content: center;
         align-items: center;
